--- a/frontend/wallet/src/manifest.json
+++ b/frontend/wallet/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ubernise-admin",
-  "short_name": "ubernise-admin",
+  "name": "wallet",
+  "short_name": "wallet",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
