--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/frontend/dist-admin
-/frontend/dist-wallet
+/frontend/dist
 /frontend/tmp
 /frontend/out-tsc
 /frontend/functions/lib
