--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -1,13 +1,13 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "projects",
+  "newProjectRoot": "",
   "projects": {
-    "frontend": {
-      "root": "",
-      "sourceRoot": "src",
+    "admin": {
+      "root": "admin/",
+      "sourceRoot": "admin/src",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "",
       "schematics": {
         "@schematics/angular:component": {
           "styleext": "scss",
@@ -36,18 +36,19 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/frontend",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "outputPath": "dist/admin",
+            "index": "admin/src/index.html",
+            "main": "admin/src/main.ts",
+            "polyfills": "admin/src/polyfills.ts",
+            "tsConfig": "admin/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              "src/manifest.json"
+              "admin/src/favicon.ico",
+              "admin/src/assets",
+              "admin/src/manifest.json",
+              "admin/src/robots.txt"
             ],
             "styles": [
-              "src/styles.scss"
+              "admin/src/styles.scss"
             ],
             "scripts": []
           },
@@ -55,8 +56,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "admin/src/environments/environment.ts",
+                  "with": "admin/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -75,35 +76,35 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "frontend:build"
+            "browserTarget": "admin:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "frontend:build:production"
+              "browserTarget": "admin:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "frontend:build"
+            "browserTarget": "admin:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
+            "main": "admin/src/test.ts",
+            "polyfills": "admin/src/polyfills.ts",
+            "tsConfig": "admin/tsconfig.spec.json",
+            "karmaConfig": "admin/karma.conf.js",
             "styles": [
-              "src/styles.scss"
+              "admin/src/styles.scss"
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              "src/manifest.json"
+              "admin/src/favicon.ico",
+              "admin/src/assets",
+              "admin/src/manifest.json"
             ]
           }
         },
@@ -111,8 +112,8 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "admin/tsconfig.app.json",
+              "admin/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -121,26 +122,118 @@
         }
       }
     },
-    "frontend-e2e": {
-      "root": "e2e/",
+    "wallet": {
+      "root": "wallet/",
+      "sourceRoot": "wallet/src",
       "projectType": "application",
+      "prefix": "",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss",
+          "spec": false
+        },
+        "@schematics/angular:class": {
+          "spec": false
+        },
+        "@schematics/angular:directive": {
+          "spec": false
+        },
+        "@schematics/angular:guard": {
+          "spec": false
+        },
+        "@schematics/angular:module": {
+          "spec": false
+        },
+        "@schematics/angular:pipe": {
+          "spec": false
+        },
+        "@schematics/angular:service": {
+          "spec": false
+        }
+      },
       "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "frontend:serve"
+            "outputPath": "dist/wallet",
+            "index": "wallet/src/index.html",
+            "main": "wallet/src/main.ts",
+            "polyfills": "wallet/src/polyfills.ts",
+            "tsConfig": "wallet/tsconfig.app.json",
+            "assets": [
+              "wallet/src/favicon.ico",
+              "wallet/src/assets",
+              "wallet/src/manifest.json",
+              "wallet/src/robots.txt"
+            ],
+            "styles": [
+              "wallet/src/styles.scss"
+            ],
+            "scripts": []
           },
           "configurations": {
             "production": {
-              "devServerTarget": "frontend:serve:production"
+              "fileReplacements": [
+                {
+                  "replace": "wallet/src/environments/environment.ts",
+                  "with": "wallet/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "serviceWorker": true
             }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "wallet:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "wallet:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "wallet:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "wallet/src/test.ts",
+            "polyfills": "wallet/src/polyfills.ts",
+            "tsConfig": "wallet/tsconfig.spec.json",
+            "karmaConfig": "wallet/karma.conf.js",
+            "styles": [
+              "wallet/src/styles.scss"
+            ],
+            "scripts": [],
+            "assets": [
+              "wallet/src/favicon.ico",
+              "wallet/src/assets",
+              "wallet/src/manifest.json"
+            ]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
+            "tsConfig": [
+              "wallet/tsconfig.app.json",
+              "wallet/tsconfig.spec.json"
+            ],
             "exclude": [
               "**/node_modules/**"
             ]
@@ -149,5 +242,5 @@
       }
     }
   },
-  "defaultProject": "frontend"
+  "defaultProject": "admin"
 }
