--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:admin": "ng serve admin",
+    "start:admin": "ng serve admin --host=0.0.0.0",
     "build:admin": "ng build admin",
     "build:prod:admin": "ng build admin --prod --build-optimizer --vendor-chunk --common-chunk",
     "test:admin": "ng test admin",
     "lint:admin": "ng lint admin",
-    "start:wallet": "ng serve wallet",
+    "start:wallet": "ng serve wallet --host=0.0.0.0 --port=4242",
     "build:wallet": "ng build wallet",
     "build:prod:wallet": "ng build wallet --prod --build-optimizer --vendor-chunk --common-chunk",
     "test:wallet": "ng test wallet",
@@ -17,16 +17,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/flex-layout": "^6.0.0-beta.18",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@angular/service-worker": "^6.1.0",
+    "@ngxs/devtools-plugin": "^3.2.0",
+    "@ngxs/form-plugin": "^3.2.0",
+    "@ngxs/router-plugin": "^3.2.0",
+    "@ngxs/storage-plugin": "^3.2.0",
+    "@ngxs/store": "^3.2.0",
+    "angularfire2": "^5.0.2",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
