--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
 # compiled output
+/.firebase
+/frontend/etc
 /frontend/dist
 /frontend/tmp
 /frontend/out-tsc
 /frontend/functions/lib
 /frontend/functions/firebase-debug.log
-/.firebase
+/functions/etc
+/functions/lib
 
 # dependencies
 /frontend/node_modules
