--- a/frontend/admin/src/manifest.json
+++ b/frontend/admin/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "admin",
   "short_name": "admin",
-  "theme_color": "#1976d2",
+  "theme_color": "#ffbd57",
   "background_color": "#fafafa",
   "display": "standalone",
   "scope": "/",
