use sw to cache google fonts resources and rename admin app name

--- a/frontend/admin/ngsw-config.json
+++ b/frontend/admin/ngsw-config.json
@@ -18,7 +18,8 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
-          "/assets/**"
+          "/assets/**",
+          "https://fonts.googleapis.com/**"
         ]
       }
     }
