--- a/frontend/admin/src/manifest.json
+++ b/frontend/admin/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "admin",
-  "short_name": "admin",
+  "name": "Ubernise",
+  "short_name": "Ubernise",
   "theme_color": "#ffbd57",
   "background_color": "#fafafa",
   "display": "standalone",
