adding new favicon and logos to admin app

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,13 @@
     "start:admin": "ng serve admin --host=0.0.0.0",
     "build:admin": "ng build admin",
     "build:prod:admin": "ng build admin --prod --build-optimizer --vendor-chunk --common-chunk",
+    "serve:dist:admin": "cd dist/admin && http-server -p 8080",
     "test:admin": "ng test admin",
     "lint:admin": "ng lint admin",
     "start:wallet": "ng serve wallet --host=0.0.0.0 --port=4242",
     "build:wallet": "ng build wallet",
     "build:prod:wallet": "ng build wallet --prod --build-optimizer --vendor-chunk --common-chunk",
+    "serve:dist:wallet": "cd dist/wallet && http-server -p 8080",
     "test:wallet": "ng test wallet",
     "lint:wallet": "ng lint wallet"
   },
@@ -50,6 +52,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
+    "http-server": "^0.11.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
