--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:admin": "ng serve admin --host=0.0.0.0",
     "build:admin": "ng build admin",
     "build:prod:admin": "ng build admin --prod --build-optimizer --vendor-chunk --common-chunk",
+    "serve:admin": "ng serve admin --host=0.0.0.0",
     "serve:dist:admin": "cd dist/admin && http-server -p 8080",
     "test:admin": "ng test admin",
     "lint:admin": "ng lint admin",
-    "start:wallet": "ng serve wallet --host=0.0.0.0 --port=4242",
     "build:wallet": "ng build wallet",
     "build:prod:wallet": "ng build wallet --prod --build-optimizer --vendor-chunk --common-chunk",
+    "serve:wallet": "ng serve wallet --host=0.0.0.0 --port=4242",
     "serve:dist:wallet": "cd dist/wallet && http-server -p 8080",
     "test:wallet": "ng test wallet",
     "lint:wallet": "ng lint wallet"
@@ -23,6 +23,7 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/fire": "^5.0.2",
     "@angular/flex-layout": "^6.0.0-beta.18",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
@@ -36,10 +37,10 @@
     "@ngxs/router-plugin": "^3.2.0",
     "@ngxs/storage-plugin": "^3.2.0",
     "@ngxs/store": "^3.2.0",
-    "angularfire2": "^5.0.2",
     "core-js": "^2.5.4",
     "firebase": "^5.5.2",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
