--- a/functions/package.json
+++ b/functions/package.json
@@ -9,10 +9,11 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "dependencies": {
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.0.3"
+    "firebase-functions": "^2.0.3",
+    "moment": "^2.22.2"
   },
   "devDependencies": {
     "tslint": "~5.8.0",
