--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,11 +1,18 @@
 {
   "compilerOptions": {
-    "lib": ["es6"],
+    // "lib": ["es6"],
     "module": "commonjs",
     "noImplicitReturns": true,
     "outDir": "lib",
     "sourceMap": true,
-    "target": "es6"
+    "target": "es6",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2017",
+      "dom"
+    ],
   },
   "compileOnSave": true,
   "include": [
