separating domains of the apps

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,17 @@
 {
   "projects": {
     "default": "ubernisee"
+  },
+  "targets": {
+    "ubernisee": {
+      "hosting": {
+        "admin-ubernise": [
+          "admin-ubernise"
+        ],
+        "wallet-ubernise": [
+          "wallet-ubernise"
+        ]
+      }
+    }
   }
 }
