adding alias to reference shared package and accepting implicit references in lint

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -13,6 +13,10 @@
       "es2017",
       "dom"
     ],
+    "baseUrl": "./",
+    "paths": {
+      "@shared/*": ["../shared/*"]
+    }
   },
   "compileOnSave": true,
   "include": [
