--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -240,6 +240,41 @@
           }
         }
       }
+    },
+    "common": {
+      "root": "/common",
+      "sourceRoot": "/common/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "/common/tsconfig.lib.json",
+            "project": "/common/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "/common/src/test.ts",
+            "tsConfig": "/common/tsconfig.spec.json",
+            "karmaConfig": "/common/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "/common/tsconfig.lib.json",
+              "/common/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "admin"
