--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "@ngxs/router-plugin": "^3.2.0",
     "@ngxs/storage-plugin": "^3.2.0",
     "@ngxs/store": "^3.2.0",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
     "hammerjs": "^2.0.8",
@@ -50,6 +51,7 @@
     "@angular/cli": "~7.0.6",
     "@angular/compiler-cli": "^7.0.4",
     "@angular/language-service": "^7.0.4",
+    "@types/chart.js": "^2.7.40",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
